<resources>
    <string name="app_name">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="registration">Registartion</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginWithGoogle">Login with Google Account</string>
    <string name="title_activity_registration">Registration</string>
    <string name="password_again">Password again</string>
    <string name="phone_number">Phone number</string>
    <string name="account_type">account type</string>
    <string name="cancel">Cancel</string>
    <string name="user_name">User name</string>
    <string name="item_placeholder">\n\n</string>
    <string name="item_info_placeholder">q</string>
    <string name="start_message">Start message</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="new_group">New Group</string>
    <string name="refresh">Refresh</string>
    <string name="type_a_message">Type a message</string>
    <string name="active">Active</string>
    <string name="active_user">Online user</string>
    <string name="delete_cheat">Delete Cheat</string>
    <string name="show_members">Show members</string>
    <string name="back_button">Return page</string>

    <string name="create_new_group">Create New Group</string>
    <string name="group_name">Group Name</string>
    <string name="save_group">Save Group</string>
    <string name="selected_image">Selected image</string>
    <string name="send">Send</string>
    <string name="delete_chat">Delete chat</string>
    <string name="change_grid">Change Grid</string>


</resources>